<resources>
    <string name="app_name">MangaReader</string>
    <string name="home">Home</string>
    <string name="library">Library</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="thumbnail">Thumbnail</string>
    <string name="title">Title</string>
    <string name="follow">Follow</string>
    <string name="read_now">Read now</string>
    <string name="synopsis">Synopsis</string>
    <string name="back">Back</string>
    <string name="check">Check</string>
    <string name="previous_chapter">previous chapter</string>
    <string name="next_chapter">next chapter</string>
    <string name="current_chapter">current chapter</string>
    <string name="open_chapter_list">open chapter list</string>
    <string name="search">Search</string>
    <string name="search_hint">Search manga</string>
    <string name="manga_synopsis_more">%s ...More</string>
    <string name="manga_synopsis_less">%s ...Less</string>
    <string name="input_name">Input name</string>
    <string name="try_again">Try again...</string>
    <string name="manga_cover">Manga cover</string>
    <string name="network_error">Network Error</string>
    <string name="filter">Filter</string>
    <string name="alphabetical_order">Alphabetical Order</string>
    <string name="time_added">Time Added</string>
    <string name="manga_reader">Manga Reader</string>
    <string name="update">update</string>
    <string name="auto_check_for_updates">Auto check for updates</string>
    <string name="time_to_update">Time to update</string>
</resources>