<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.MangaDetailActivity"
    android:orientation="vertical"
    android:paddingHorizontal="15dp">

    <include
        android:id="@+id/toolbar"
        layout="@layout/action_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        android:weightSum="3">

        <ImageView
            android:id="@+id/manga_cover"
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_launcher_background" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:paddingLeft="5dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/manga_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Manga Title"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/manga_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Matsumoto Naoya"
                android:textSize="16sp" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/manga_status"
                android:text="Đang tiến hành"
                android:textSize="16sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/manga_genre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Action - Comedy - Manga - Sci-fi - Supernatural"
                android:textSize="16sp"
                android:maxLines="2"
                android:ellipsize="end"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/manga_view_count"
                android:text="20.258.874 lượt xem"
                android:textSize="16sp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginVertical="14dp">

        <Button
            android:id="@+id/manga_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/follow" />

        <Button
            android:id="@+id/manga_check_for_updates"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="Check" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="3">
        <RatingBar
            android:id="@+id/manga_rating"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/manga_rating_text"
            android:text="3.5/5 - 1153989 Lượt đánh giá"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:textSize="16sp"
            android:layout_marginLeft="10dp"/>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/synopsis"
        android:layout_marginTop="8dp"
        android:textSize="26sp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/manga_synopsis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Synopsis"
            android:textSize="16sp" />

    </ScrollView>

    <Button
        android:id="@+id/manga_read"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_bg"
        android:layout_marginTop="8dp"
        android:text="@string/read_now" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="26 Chương"
        android:textSize="20sp"
        android:id="@+id/chapter_count"
        android:layout_marginTop="16dp"/>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/chapter_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </androidx.core.widget.NestedScrollView>

</LinearLayout>